# treemoissa

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-13-llm-search.md  2026-03-14-llm-only-default.md  2026-03-22-vram-detection-bilingual-docs.md
docs/superpowers/specs/: 2026-03-14-car-context-registry-design.md  2026-03-14-llm-only-default-design.md  2026-03-14-photos-per-minute-design.md  2026-03-22-vram-detection-bilingual-docs-design.md
tests/: test_llm_analyzer.py  test_llm_pool.py  test_main_cli.py  test_runserver.py  test_utils.py
treemoissa/: __init__.py  classifier.py  color.py  detector.py  llm_analyzer.py  llm_pool.py  main.py  organizer.py  registry.py  runserver.py  utils.py
